updated google map settings

--- a/Team.html
+++ b/Team.html
@@ -172,18 +172,18 @@
                     <h1 class="title animatable fadeInUp">Our Team</h1>
                     <h2 class="title animatable fadeInUp">Executives</h2>
                     <div class="row">
-                        <!-- Haotian Zhu -->
+                        <!-- Jarvis Wang -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/zhuh50/" target="_blank">
-                                        <img src="./assets/img/faces/john.jpg" alt="...">
+                                    <a href="https://www.linkedin.com/in/jarvis-wang/" target="_blank">
+                                        <img src="./assets/img/faces/jarvis.jpg" alt="...">
                                     </a>
                                 </div>
                                 <div class="card-body">
                                     <a>
                                         <div class="author">
-                                            <h4 class="card-title">Haotian Zhu</h4>
+                                            <h4 class="card-title">Jarvis Wang</h4>
                                             <h6 class="card-category">Project Manager</h6>
                                         </div>
                                     </a>
@@ -196,14 +196,14 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/jianzhao-wang-359978149/" target="_blank">
-                                        <img src="./assets/img/faces/joe.jpg" alt="...">
+                                    <a href="https://www.linkedin.com/in/vborysov/" target="_blank">
+                                        <img src="./assets/img/faces/val.jpg" alt="...">
                                     </a>
                                 </div>
                                 <div class="card-body">
                                     <a>
                                         <div class="author">
-                                            <h4 class="card-title">Joe Wang</h4>
+                                            <h4 class="card-title">Valentyn Borysov</h4>
                                             <h6 class="card-category">Mechanical Lead</h6>
                                         </div>
                                     </a>
@@ -309,19 +309,19 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Edward Yu -->
+                        <!-- John Zhu -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/zeyi-（edward）-yu-4ab80aa6/" target="_blank">
-                                        <img src="./assets/img/faces/edward.jpg" alt="...">
+                                    <a href="https://www.linkedin.com/in/zhuh50/" target="_blank">
+                                        <img src="./assets/img/faces/john.jpg" alt="...">
                                     </a>
                                 </div>
                                 <div class="card-body">
                                     <a>
                                         <div class="author">
-                                            <h4 class="card-title">Edward Yu</h4>
-                                            <h6 class="card-category">Manager</h6>
+                                            <h4 class="card-title">John Zhu</h4>
+                                            <h6 class="card-category">Computer Vision Lead</h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
@@ -479,25 +479,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Jarvis Wang -->
-                        <div class="col-md-4 animatable fadeInUp">
-                            <div class="card card-profile card-plain">
-                                <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/jarvis-wang/" target="_blank"><img
-                                            src="./assets/img/faces/jarvis.jpg" alt="..."></a>
-                                </div>
-                                <div class="card-body">
-                                    <a href="#paper-kit">
-                                        <div class="author">
-                                            <h4 class="card-title">Jarvis Wang</h4>
-                                            <h6 class="card-category"></h6>
-                                        </div>
-                                    </a>
-                                    <p class="card-description text-center">
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
+                        
                         <!-- Tony Yang -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
@@ -517,8 +499,28 @@
                                 </div>
                             </div>
                         </div>
+
+                        <!-- Leo Liu -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="https://www.linkedin.com/in/chengxin-liu/" target="_blank"><img
+                                            src="./assets/img/faces/leo.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Leo Liu</h4>
+                                            <h6 class="card-category"></h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- JBC -->
-                        <div class="col-md-3 animatable fadeInUp">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="https://www.linkedin.com/in/bingchen-ji-947093135/" target="_blank"><img
@@ -537,28 +539,10 @@
                             </div>
                         </div>
 
-                        <!-- Leo Liu -->
-                        <div class="col-md-3 animatable fadeInUp">
-                            <div class="card card-profile card-plain">
-                                <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/chengxin-liu/" target="_blank"><img
-                                            src="./assets/img/faces/leo.jpg" alt="..."></a>
-                                </div>
-                                <div class="card-body">
-                                    <a href="#paper-kit">
-                                        <div class="author">
-                                            <h4 class="card-title">Leo Liu</h4>
-                                            <h6 class="card-category"></h6>
-                                        </div>
-                                    </a>
-                                    <p class="card-description text-center">
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
+
 
                         <!-- James Cheng -->
-                        <div class="col-md-3 animatable fadeInUp">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="https://www.linkedin.com/in/james-cheng-5a5a08123/" target="_blank"><img
@@ -577,7 +561,7 @@
                             </div>
                         </div>
                         <!-- Rudy Liu -->
-                        <div class="col-md-3 animatable fadeInUp">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="https://www.linkedin.com/in/rudy-liu-a40072136/" target="_blank"><img
@@ -614,7 +598,8 @@
                                             class="fab fa-facebook-square"></i></a>
                                 </li>
                                 <li>
-                                    <a class="nav-link" href="https://www.youtube.com/channel/UCUXVhB4hOqwW6mYe6Jd7yig" target="_blank"><i class="fab fa-youtube"></i></a>
+                                    <a class="nav-link" href="https://www.youtube.com/channel/UCUXVhB4hOqwW6mYe6Jd7yig"
+                                        target="_blank"><i class="fab fa-youtube"></i></a>
                                 </li>
                                 <li>
                                     <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster"
