--- a/Sponsor.html
+++ b/Sponsor.html
@@ -27,6 +27,7 @@
     <!-- Smooth Scroll -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
 </head>
 
 <body>
@@ -214,12 +215,21 @@
                     <br />
                     <br />
 
-                    <div data-is data-is-access-token="9410218449.6142d53.9254423118334db5a13b23250c44d3ab"
-                        data-is-cache-media-time="2500" data-is-rows="2"></div>
+                    <div id="instafeed"></div>
+
+
 
                 </div>
 
             </div>
+
+            <script type="text/javascript">
+                var feed = new Instafeed({
+                    accessToken: '04d0fef1fe37f840aec485dc34640821'
+                });
+                feed.run();
+            </script>
+
 
             <!-- Donate Us -->
             <div id="donate" class="section text-center container-fluid">
@@ -335,7 +345,8 @@
                                             class="fab fa-facebook-square"></i></a>
                                 </li>
                                 <li>
-                                    <a class="nav-link" href="https://www.youtube.com/channel/UCUXVhB4hOqwW6mYe6Jd7yig" target="_blank"><i class="fab fa-youtube"></i></a>
+                                    <a class="nav-link" href="https://www.youtube.com/channel/UCUXVhB4hOqwW6mYe6Jd7yig"
+                                        target="_blank"><i class="fab fa-youtube"></i></a>
                                 </li>
                                 <li>
                                     <a class="nav-link" href="https://www.linkedin.com/company/mac-robomaster"
@@ -390,8 +401,7 @@
 <script src="assets/js/jquery-ui-1.12.1.custom.min.js" type="text/javascript"></script>
 <script src="assets/js/popper.js" type="text/javascript"></script>
 <script src="assets/js/bootstrap.min.js" type="text/javascript"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBayJJXo_yGLVyvHH6TYOj7yqUvX6ozClQ&callback=initMap" async
-    defer></script>
+<script src="assets/js/instafeed.min.js" type="text/javascript"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
