--- a/Team.html
+++ b/Team.html
@@ -457,6 +457,7 @@
                         </div>
                     </div>
 
+
                     <!-- Co-Founders -->
                     <h2 class="title animatable fadeInUp">Co-Founders</h2>
                     <div class="row animatable fadeInUp">
@@ -479,7 +480,25 @@
                                 </div>
                             </div>
                         </div>
-                        
+                        <!-- Jarvis Wang -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="https://www.linkedin.com/in/jarvis-wang/" target="_blank"><img
+                                            src="./assets/img/faces/jarvis.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Jarvis Wang</h4>
+                                            <h6 class="card-category"></h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Tony Yang -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
@@ -499,28 +518,8 @@
                                 </div>
                             </div>
                         </div>
-
-                        <!-- Leo Liu -->
-                        <div class="col-md-4 animatable fadeInUp">
-                            <div class="card card-profile card-plain">
-                                <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/chengxin-liu/" target="_blank"><img
-                                            src="./assets/img/faces/leo.jpg" alt="..."></a>
-                                </div>
-                                <div class="card-body">
-                                    <a href="#paper-kit">
-                                        <div class="author">
-                                            <h4 class="card-title">Leo Liu</h4>
-                                            <h6 class="card-category"></h6>
-                                        </div>
-                                    </a>
-                                    <p class="card-description text-center">
-                                    </p>
-                                </div>
-                            </div>
-                        </div>
                         <!-- JBC -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="https://www.linkedin.com/in/bingchen-ji-947093135/" target="_blank"><img
@@ -539,10 +538,28 @@
                             </div>
                         </div>
 
-
+                        <!-- Leo Liu -->
+                        <div class="col-md-3 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="https://www.linkedin.com/in/chengxin-liu/" target="_blank"><img
+                                            src="./assets/img/faces/leo.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Leo Liu</h4>
+                                            <h6 class="card-category"></h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
 
                         <!-- James Cheng -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="https://www.linkedin.com/in/james-cheng-5a5a08123/" target="_blank"><img
@@ -561,7 +578,7 @@
                             </div>
                         </div>
                         <!-- Rudy Liu -->
-                        <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="https://www.linkedin.com/in/rudy-liu-a40072136/" target="_blank"><img
