--- a/Sponsor.html
+++ b/Sponsor.html
@@ -82,6 +82,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" title="Follow us on Youtube" data-placement="bottom"
+                            href="https://www.youtube.com/channel/UCUXVhB4hOqwW6mYe6Jd7yig" target="_blank">
+                            <i class="fab fa-youtube"></i>
+                            <p class="d-lg-none">Youtube</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="Follow us on LinkedIn" data-placement="bottom"
                             href="https://www.linkedin.com/company/mac-robomaster" target="_blank">
                             <i class="fab fa-linkedin"></i>
@@ -186,13 +193,15 @@
                         <div class="col-sm-4 animatable fadeInUp">
                             <img src="./assets/img/sponsors/mcmaster.png" style="height: 100px">
                         </div>
-                        <div class="col-sm-6 animatable fadeInUp">
+                        <div class="col-sm-4 animatable fadeInUp">
                             <img src="./assets/img/sponsors/nvidia.png" style="height: 120px">
                         </div>
-                        <div class="col-sm-6 animatable fadeInUp">
+                        <div class="col-sm-4 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/monday.png" style="height: 120px">
+                        </div>
+                        <div class="col-sm-4 animatable fadeInUp">
                             <img src="./assets/img/sponsors/atlassian.png" style="height: 120px">
                         </div>
-
                     </div>
 
                     <div class="col-md-12 ml-auto mr-auto animatable fadeInUp">
