--- a/apply.html
+++ b/apply.html
@@ -81,6 +81,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" title="Follow us on Youtube" data-placement="bottom"
+                            href="https://www.youtube.com/channel/UCUXVhB4hOqwW6mYe6Jd7yig" target="_blank">
+                            <i class="fab fa-youtube"></i>
+                            <p class="d-lg-none">Youtube</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="Follow us on LinkedIn" data-placement="bottom"
                             href="https://www.linkedin.com/company/mac-robomaster" target="_blank">
                             <i class="fab fa-linkedin"></i>
@@ -159,14 +166,14 @@
                                 If you are interested in this amazing oppotunity, feel free to come!
                             </h4>
                             <br>
-                            <!-- <a href="#paper-kit" class="btn btn-danger btn-round">Application Closed</a>
-                        </div> -->
+                            <a href="#paper-kit" class="btn btn-danger btn-round">Application Not Open Yet</a>
+                        </div>
 
-                            <div class="col-md-12 ml-auto mr-auto">
+                            <!-- <div class="col-md-12 ml-auto mr-auto">
                                 <button class="btn btn-danger btn-lg btn-fill"
                                     onclick="location.href='https://forms.gle/MaYZQz83KmbevSfQA'" type="button">Apply
                                     Now</button>
-                            </div>
+                            </div> -->
                         </div>
 
                         <!-- <div class="row">
