--- a/index.html
+++ b/index.html
@@ -81,6 +81,13 @@
                         </a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" rel="tooltip" title="Follow us on Youtube" data-placement="bottom"
+                            href="https://www.youtube.com/channel/UCUXVhB4hOqwW6mYe6Jd7yig" target="_blank">
+                            <i class="fab fa-youtube"></i>
+                            <p class="d-lg-none">Youtube</p>
+                        </a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" rel="tooltip" title="Follow us on LinkedIn" data-placement="bottom"
                             href="https://www.linkedin.com/company/mac-robomaster" target="_blank">
                             <i class="fab fa-linkedin"></i>
