Update Jim's photo

--- a/Team.html
+++ b/Team.html
@@ -184,7 +184,7 @@
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="" target="_blank">
-                                        <img src="./assets/img/faces/empty.jpg" alt="..."></a>
+                                        <img src="./assets/img/faces/jim.jpg" alt="..."></a>
                                 </div>
                                 <div class="card-body">
                                     <a>
