Update Jim's info to Co-Founder

--- a/Team.html
+++ b/Team.html
@@ -192,6 +192,7 @@
                                             <h4 class="card-title">Jim Su</h4>
                                             <h6 class="card-category">Project Manager, </h6>
                                             <h6 class="card-category">Mechanical Lead</h6>
+                                            <h6 class="card-category">Co-Founder</h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
@@ -401,6 +402,25 @@
                                     <a>
                                         <div class="author">
                                             <h4 class="card-title">Jarvis Wang</h4>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Jim Su -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="" target="_blank">
+                                        <img src="./assets/img/faces/jim.jpg" alt="..."></a>
+                                    </a>
+                                </div>
+                                <div class="card-body">
+                                    <a>
+                                        <div class="author">
+                                            <h4 class="card-title">Jim Su</h4>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
