Update Application page

--- a/apply.html
+++ b/apply.html
@@ -144,7 +144,7 @@
                 <div class="container animatable fadeInUp">
                     <div class="row">
                         <div class="col-md-8 ml-auto mr-auto">
-                            <h1 class="title">Join Our Team</h1>
+                            <!-- <h1 class="title">Join Our Team</h1>
                             <h5 id="test" class="description animated">We take pride in the development of everyone on
                                 the
                                 team. The experience and skills that people develop in all areas is better than anything
@@ -153,27 +153,27 @@
                                 expand our team in a diverse range of faculties from engineering to business. Come to
                                 our
                                 recruitment sessions or just reach out if you are interested in what we do.
-                            </h5>
-                            <!-- <h1 class="title">Become our operators</h1>
+                            </h5> -->
+                            <h1 class="title">Become our operators</h1>
                         <h5 id="test" class="description animated">Interested in FPS games and RC racing? Do you fly
                             drones and FPV? Are you an experienced Marauder on the esports battlefield? Here's your
                             chance! We are recruiting robot operators to represent our team to attend the RoboMaster
                             final competition in Shenzhen, China in mid-July (especially if you are good at FPS games).
                             Part of the travel expense will be reimbursed! 
-                        </h5> -->
+                        </h5>
 
-                            <h4 id="test" class="description animated" style="color: white">
+                            <!-- <h4 id="test" class="description animated" style="color: white">
                                 If you are interested in this amazing oppotunity, feel free to come!
                             </h4>
                             <br>
                             <a href="#paper-kit" class="btn btn-danger btn-round">Application Not Open Yet</a>
-                        </div>
+                        </div> -->
 
-                            <!-- <div class="col-md-12 ml-auto mr-auto">
+                            <div class="col-md-12 ml-auto mr-auto">
                                 <button class="btn btn-danger btn-lg btn-fill"
-                                    onclick="location.href='https://forms.gle/MaYZQz83KmbevSfQA'" type="button">Apply
+                                    onclick="location.href='https://forms.gle/HdPv6DDJkJrqWrDy6'" type="button">Apply
                                     Now</button>
-                            </div> -->
+                            </div> 
                         </div>
 
                         <!-- <div class="row">
