--- a/Team.html
+++ b/Team.html
@@ -266,6 +266,26 @@
                     <!-- Advisors -->
                     <h2 class="title animatable fadeInUp">Advisors</h2>
                     <div class="row animatable fadeInUp">
+						<!-- Dr. Fengjun Yan -->
+                        <div class="col-md-3 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a><img src="./assets/img/faces/yan.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Dr. Fengjun Yan</h4>
+                                            <h6 class="card-category">Associate Professor</h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                        Department of Mechanical Engineering
+
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Dr. Yaser Haddara -->
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
@@ -365,6 +385,7 @@
                                 </div>
                             </div>
                         </div>
+						
                     </div>
 
 
