update team page

--- a/Team.html
+++ b/Team.html
@@ -204,14 +204,14 @@
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
-                                    <a href="https://www.linkedin.com/in/jingeli/" target="_blank">
-                                        <img src="./assets/img/faces/jinge.jpg" alt="...">
+                                    <a href="https://www.linkedin.com/in/tttimmm/" target="_blank">
+                                        <img src="./assets/img/faces/tim.jpg" alt="...">
                                     </a>
                                 </div>
                                 <div class="card-body">
                                     <a>
                                         <div class="author">
-                                            <h4 class="card-title">Jinge Li</h4>
+                                            <h4 class="card-title">Yuntian Wang</h4>
                                             <h6 class="card-category">Control Lead</h6>
                                         </div>
                                     </a>
@@ -230,7 +230,7 @@
                                 <div class="card-body">
                                     <a>
                                         <div class="author">
-                                            <h4 class="card-title">Bill Lin</h4>
+                                            <h4 class="card-title">Haoyu Lin</h4>
                                             <h6 class="card-category">Computer Vision Lead </h6>
                                         </div>
                                     </a>
@@ -612,7 +612,7 @@
                             </div>
                         </div>
                         <!-- Jinge Li -->
-                        <!-- <div class="col-md-4 animatable fadeInUp">
+                        <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
                                     <a href="https://www.linkedin.com/in/jingeli/" target="_blank">
@@ -630,7 +630,7 @@
                                     </p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div> 
                         <!-- Raghib Quader -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
