--- a/index.html
+++ b/index.html
@@ -245,8 +245,8 @@
                                 <div class="description">
                                     <h4 class="info-title">Computer Vision</h4>
                                     <p class="description">
-                                        As the vision of robots, it helps the canon recognize
-                                        targets and auto-aim.
+                                        Vision and brain of robots, object detection and decision making
+                                        powered by AI.  
                                     </p>
                                     <a href="#pkp" class="btn btn-link btn-danger">See more</a>
                                 </div>
