update team lead

--- a/Team.html
+++ b/Team.html
@@ -206,7 +206,7 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Jinge Li -->
+                        <!-- Tim -->
                         <div class="col-md-4 animatable fadeInUp">
                             <div class="card card-profile card-plain">
                                 <div class="card-avatar">
@@ -238,6 +238,45 @@
                                         <div class="author">
                                             <h4 class="card-title">Haoyu Lin</h4>
                                             <h6 class="card-category">Computer Vision Lead </h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+						<!-- Carla Pan -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="https://www.linkedin.com/in/shan-qing-pan-5a705b187/" target="_blank"><img
+                                            src="./assets/img/faces/carla.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Carla Pan</h4>
+                                            <h6 class="card-category">Mechanical Lead</h6>
+											<h6 class="card-category">Co-Founder</h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+						<!-- Felix -->
+                        <div class="col-md-4 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="" target="_blank"><img
+                                            src="./assets/img/faces/felix.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Felix Zhang</h4>
+                                            <h6 class="card-category">Mechanical Lead</h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
@@ -448,6 +487,25 @@
                                     <a>
                                         <div class="author">
                                             <h4 class="card-title">Jim Su</h4>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+						<!-- Carla Pan -->
+                        <div class="col-md-3 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="https://www.linkedin.com/in/shan-qing-pan-5a705b187/" target="_blank"><img
+                                            src="./assets/img/faces/carla.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Carla Pan</h4>
+                                            <h6 class="card-category"></h6>
                                         </div>
                                     </a>
                                     <p class="card-description text-center">
