--- a/Team.html
+++ b/Team.html
@@ -513,6 +513,25 @@
                                 </div>
                             </div>
                         </div>
+						<!-- zhenghang li -->
+                        <div class="col-md-3 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a href="" target="_blank"><img
+                                            src="./assets/img/faces/zhenghang.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Zhenghang Li</h4>
+                                            <h6 class="card-category"></h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
                         <!-- Tony Yang -->
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
