--- a/Sponsor.html
+++ b/Sponsor.html
@@ -203,10 +203,10 @@
                             <img src="./assets/img/sponsors/nvidia.png" style="height: 120px">
                         </div>
                         <div class="col-sm-4 animatable fadeInUp">
-                            <img src="./assets/img/sponsors/monday.png" style="height: 120px">
-                        </div>
-                        <div class="col-sm-4 animatable fadeInUp">
                             <img src="./assets/img/sponsors/atlassian.png" style="height: 120px">
+                        </div>
+						<div class="col-sm-4 animatable fadeInUp">
+                            <img src="./assets/img/sponsors/Altium_Logo_BLK.svg" style="height: 170px">
                         </div>
                     </div>
 
