--- a/Team.html
+++ b/Team.html
@@ -523,7 +523,7 @@
                                 <div class="card-body">
                                     <a href="#paper-kit">
                                         <div class="author">
-                                            <h4 class="card-title">Zhenghang Li</h4>
+                                            <h4 class="card-title">Zhenghan Li</h4>
                                             <h6 class="card-category"></h6>
                                         </div>
                                     </a>
