--- a/Sponsor.html
+++ b/Sponsor.html
@@ -232,18 +232,19 @@
 
                     <div id="instafeed"></div>
 
-
-
                 </div>
 
             </div>
-
-            <script type="text/javascript">
-                var feed = new Instafeed({
-                    accessToken: '04d0fef1fe37f840aec485dc34640821'
-                });
-                feed.run();
-            </script>
+、
+			<!-- Place <div> tag where you want the feed to appear -->
+			<div id="curator-feed-default-feed-layout"><a href="https://curator.io" target="_blank" class="crt-logo crt-tag">Powered by Curator.io</a></div><!-- The Javascript can be moved to the end of the html page before the </body> tag --><script type="text/javascript">
+			/* curator-feed-default-feed-layout */
+			(function(){
+			var i,e,d=document,s="script";i=d.createElement("script");i.async=1;i.charset="UTF-8";
+			i.src="https://cdn.curator.io/published/fd32a8fd-14b4-4bc5-9e3a-b0fb175c7ab1.js";
+			e=d.getElementsByTagName(s)[0];e.parentNode.insertBefore(i, e);
+			})();
+			</script>
 
 
             <!-- Donate Us -->
