--- a/index.html
+++ b/index.html
@@ -308,31 +308,25 @@
                                         </li>
                                         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
                                         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-                                        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+                                        
                                     </ol>
                                     <div class="carousel-inner" role="listbox">
                                         <div class="carousel-item active">
-                                            <img class="d-block img-fluid" src="assets/img/projects/standard_bot.png"
+                                            <img class="d-block img-fluid" src="assets/img/projects/4leg_standard.SVG"
                                                  style="margin-left: auto; margin-right: auto;" alt="First slide">
                                             <div class="carousel-caption d-none d-md-block">
                                                 <!-- <p>Somewhere</p> -->
                                             </div>
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="d-block img-fluid" src="assets/img/projects/engineer_bot.png"
+                                            <img class="d-block img-fluid" src="assets/img/projects/mecanum_standard.svg"
                                                  style="margin-left: auto; margin-right: auto;" alt="Second slide">
                                             <div class="carousel-caption d-none d-md-block">
                                             </div>
                                         </div>
                                         <div class="carousel-item">
-                                            <img class="d-block img-fluid" src="assets/img/projects/aerial_bot.png"
+                                            <img class="d-block img-fluid" src="assets/img/projects/sentry.SVG"
                                                  style="margin-left: auto; margin-right: auto;" alt="Third slide">
-                                            <div class="carousel-caption d-none d-md-block">
-                                            </div>
-                                        </div>
-                                        <div class="carousel-item">
-                                            <img class="d-block img-fluid" src="assets/img/projects/hero_bot.png"
-                                                 style="margin-left: auto; margin-right: auto;" alt="Fourth slide">
                                             <div class="carousel-caption d-none d-md-block">
                                             </div>
                                         </div>
