--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
                     </div>
                     <div class="row animatable fadeInUp">
                         <div class="col-md-12 ml-auto mr-auto">
-                            <img src="assets/img/schedule.png" style="width:inherit">
+                            <img src="assets/img/schedule.svg" style="width:inherit">
                         </div>
 
 
