--- a/Team.html
+++ b/Team.html
@@ -331,6 +331,27 @@
                                 </div>
                             </div>
                         </div>
+						<!-- Dr. Hatem Zubrob -->
+                        <div class="col-md-3 animatable fadeInUp">
+                            <div class="card card-profile card-plain">
+                                <div class="card-avatar">
+                                    <a><img src="./assets/img/faces/dr-hatem-zurob.jpg" alt="..."></a>
+                                </div>
+                                <div class="card-body">
+                                    <a href="#paper-kit">
+                                        <div class="author">
+                                            <h4 class="card-title">Dr. Hatem Zurob</h4>
+                                            <h6 class="card-category">Professor, Chair</h6>
+                                        </div>
+                                    </a>
+                                    <p class="card-description text-center">
+                                        Department of Materials Science and Engineering
+
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+						
                         <!-- Dr. Yaser Haddara -->
                         <div class="col-md-3 animatable fadeInUp">
                             <div class="card card-profile card-plain">
